# ToolPackage

./: .gitignore  README.md
cppTool/CVKit/: CMakeLists.txt
cppTool/CVKit/include/: utils.h
cppTool/CVKit/src/: main.cpp  utils.cpp
cppTool/playground/rs2cv/: CMakeLists.txt
cppTool/playground/rs2cv/src/: main.cpp
pyTool/: setup.py
pyTool/cvision/examples/: realsense_yolo.py
pyTool/cvision/src/: adaptiveThreshold.py  utils.py
pyTool/plts/basic/: plot2D.py
pyTool/plts/example/: claorimetry.ipynb  claorimetry.py  plotGaussian.py  plotSimpleKalman.py
pyTool/plts/func/: liveplot.py  plot2D.py
pyTool/pyTool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyTool/pyUtils/: decorator.py
pyTool/pyUtils/ROSTool/: CoreDes.py  README.md  data.json  rosdes.py
pyTool/rotation/: PRY_roration3D.py  rot_i.py  rot_mat.py
python/LivePlot/: liveplot.py  test.py
rotation/: PRY_roration3D.py  basic.py  loadobj.py  rot_i.py
